web/static/css/custom.css
/*
 * Override skin style
 * ----------
 */
  a {
    color: #7767da;
  }
  a:hover {
    color: #1F1172;
  }
  .skin-opencve .sidebar a {
    color: #bfc5c6;
  }
  .skin-opencve .main-header .navbar {
    background-color: #fff;
    border-bottom: 1px solid #dcdcdc;
  }
  .skin-opencve .main-header .navbar .sidebar-toggle:hover {
    background-color: #fff;
  }

  .skin-opencve .main-header .navbar .navbar-title {
    font-size: 24px;
    float: left;
    margin: 12px;
  }

  .skin-opencve .main-header .navbar .navbar-title i {
    font-size: 16px;
  }

  .skin-opencve .main-header .navbar .navbar-title a.navbar-title-cve-link {
    color: inherit;
    text-decoration: none;
  }

  .skin-opencve .main-header .navbar .navbar-title a.navbar-title-cve-link:hover,
  .skin-opencve .main-header .navbar .navbar-title a.navbar-title-cve-link:focus {
    color: #1F1172;
    text-decoration: none;
  }

  .skin-opencve .main-header .logo {
    background-color: #090031;
  }
  .skin-opencve .main-header .logo:hover {
    background-color: #090031;
  }
  .skin-opencve .main-header li.user-header {
    background-color: #090031;
  }
  .skin-opencve .box-title {
    color: #253841;
  }
  .skin-opencve .box.box-primary {
    border-color: #090031;
  }
  .skin-opencve .sidebar-menu>li>.treeview-menu {
    background: #2e235d;
}
  .box-subscriptions .label {
    line-height: 25px;
    font-size: 85%;
    font-weight: 600;
  }
  .bg-blue{
    background-color: #5648D8 !important;
  }
  .bg-primary {
    background-color: #5648D8;
  }
  .btn-primary {
    color: #fff;
    background-color: #5648D8;
    border: 1px solid #5648D8;
  }
  .btn-primary:hover,
  .btn-primary:focus,
  .btn-primary:active {
    background-color: #090031 !important;
  }

  .btn-social>:first-child {
    line-height: inherit;
  }

  .btn-social {
    border: 1px solid rgba(0,0,0,0.2);
    color: #2e2e2e;
  }

  .social-auth-links p {
    margin: 20px 0px;
  }

  .social-auth-links form {
    margin-bottom: 10px;
  }

  .btn-social img {
    width: 18px;
  }

  .box-header button.subscribe {
    margin-left: 10px;
  }

  .badge-primary {
    background-color: #090031;
  }

  .bg-light-blue, .label-primary, .modal-primary .modal-body {
    background-color: #5842DF !important;
  }

  a.label-primary:hover, button.btn-primary:hover {
    background-color: #1F1172 !important;
  }

  .center {
    text-align: center;
  }
  .no-padding {
    padding: 0 !important;
  }
  .no-margin-bottom {
    margin-bottom: 0px !important;
  }
  .pointer {
    cursor: pointer;
  }
  .alert {
    border-radius: 0;
  }
  .terms {
    font-style: italic;
  }
  .text-dotted {
    text-decoration: none;
    border-bottom: dotted 1px;
  }

  .profile-picture {
    padding: 10px;
    text-align: center;
    margin-left: -1px;

  }
  .profile-picture .img-thumbnail {
    padding: 1px;
  }
  .profile-picture h3 {
    color: white;
  }

  .nav-tabs-primary > .nav-tabs > li.active {
    border-top-color: #090031;
  }
  .nav-tabs-primary > .nav-tabs > li.header {
    font-size: 16px;
  }
  .nav-tabs-profile > .nav-tabs > li.active {
    border-top: 0px;
    border-bottom: 3px solid #090031;
  }

  .nav-tabs-settings > .tab-content {
    min-height: 400px;
  }

  .nav-tabs-settings .tab-content h3 {
    border-bottom: 1px solid #d9d9d9;
    padding-bottom: 10px;
    margin-bottom: 15px;
  }

  .table td.no-bordered {
    border-top: 0;
  }

  .dropcap {
    color: #090031;
    display: block;
    float: left;
    font-size: 3.1em;
    font-weight: 400;
    line-height: 36px;
    margin-right: 6px;
    text-shadow: none;
}
.text-small-12 {
  font-size: 12px;
}

.text-small-14 {
  font-size: 14px;
}

.panel-group-cvss {
  margin-bottom: 10px;
}

.panel-group-cvss .panel-title {
  font-size: 14px;
  display: flex;
  align-items: center;
  gap: 8px;
}

.panel-group-cvss .panel-title .panel-title-text {
  min-width: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  flex: 1;
}

.panel-group-cvss .panel-title .pull-right {
  flex-shrink: 0;
}

.label-cvss {
  text-align: right;
  margin-left: 10px;
}

.cvss-radar {
    height: 200px;
}

.table .td-ellipsis {
  max-width: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.has-search {
    position: relative;
}

.form-control-feedback {
    position: absolute;
    right: 10px;
    top: 50%;
    transform: translateY(-50%);
    pointer-events: none;
}
.table .td-break {
  max-width: 0;
  word-wrap: break-word;
}

.table td.rowspaned {
  vertical-align : middle;
  text-align:center;
  background-color: #ddd;
  font-weight: bold;
}

.table-configuration td.and {
  padding-top: 0px;
  padding-bottom: 0px;
  border-top: 0px;
}

.table .td-grouper {
    background-color: #ddd;
}

.tabs-report {
  border-radius: 3px;
  border-top: 3px solid #090031!important;
}

.tabs-report h3 {
    margin-bottom: 20px;
}

.tabs-vertical-env {
  background-color: #eeeeee;
  margin-bottom: 30px;
}
.tabs-vertical-env .tab-content {
  background: #ffffff;
  display: table-cell;
  margin-bottom: 30px;
  padding: 30px;
  vertical-align: top;
}
.tabs-vertical-env .nav.tabs-vertical {
  display: table-cell;
  min-width: 120px;
  vertical-align: top;
  width: 150px;
}
.tabs-vertical-env .nav.tabs-vertical li.active > a {
  background-color: #ffffff;
  border: 0;
}
.tabs-vertical-env .nav.tabs-vertical li > a {
  color: #333333;
  text-align: center;
  white-space: nowrap;
}

.report-change-title {
    font-size: 16px;
    padding-bottom: 5px;
    border-bottom: 1px solid #e8e5e5;
}

.report-cve {
    background-color: #f9f9f9;
    border: 1px solid #ddd;
    border-radius: 3px;
    margin-bottom: 20px;
}

.table-events {
    table-layout: fixed;
    word-wrap: break-word;
}

.error-page {
  margin-top: 50px;
}

.error-page .headline {
  margin-top: -20px;
}

.g-recaptcha > div:first-of-type {
  margin: 0 auto;
}

h1 .label {
  margin-left: 5px;
}
/* ... */

